# PolyBackgamon-Drunken-Computing-Machine

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  README.md  TODO-list
human/: human.c
human/include/: human.h
human/src/: human.c
interface/: CMakeLists.txt  Makefile  graph.c  main.c
interface/include/: CMakeLists.txt  backgammon.h  config.h.in  error.h  game.h  graph.h  human.h  init.h  logger.h  referee.h
interface/src/: CMakeLists.txt  error.c  game.c  graph.c  human.c  init.c  logger.c  main.c  referee.c
makefiles/: makefile  makefile_interface  makefile_strat
strategy/: CMakeLists.txt  Makefile
strategy/include/: AI_tree.h  arraylist.h  backgammon.h  compact.h  possibilities.h  utils.h
strategy/src/: AI_main.c  AI_pote.c  AI_tree.c  API.c  CMakeLists.txt  arraylist.c  compact.c  possibilities.c  utils.c
